# rasperature

./: .gitignore  CLOUD_COST_ANALYSIS.md  DEPLOYMENT.md  README.md  pyproject.toml  setup.sh
cloud-api/: .dockerignore  Dockerfile  bigquery_client.py  deploy.sh  main.py  models.py  requirements.txt
pi-app/: README.md  app.py  cloud_publisher.py  requirements.txt  sensor_manager.py
pi-app/sensors/: __init__.py  base.py  bmp280.py  dht22.py
pi-app/templates/: base.html  config.html  index.html  sensors.html
sensor-readers/bmp280/: __init__.py  bmp280_reader.py  continuous_log.py  test_sensor.py
terraform/: README.md  bigquery.tf  cloudrun.tf  main.tf  monitoring.tf  pubsub.tf  terraform.tfvars.example  variables.tf
web-dashboard/: README.md  api.js  app.js  charts.js  config.js  index.html  styles.css
